Fix for notification images being too large

--- a/resources/assets/styles/content.less
+++ b/resources/assets/styles/content.less
@@ -587,6 +587,10 @@ html {
 
   .img-link {
     float: left;
+    img {
+      width: 50px;
+      height: 50px;
+    }
   }
   .message {
     margin-left: 55px;
